--- a/MiscAdditions/MiscAdditions.csproj
+++ b/MiscAdditions/MiscAdditions.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -53,7 +54,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\DebugRenderConsoleCommand.cs" />
     <Compile Include="Commands\MusicConsoleCommand.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="MiscAdditionsMod.cs" />
